<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_32"
        android:orientation="vertical"
        android:padding="@dimen/padding_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:textSize="@dimen/textsize_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:text="@string/sign_up_copytext" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:hint="@string/username"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_8"
                android:text="@string/indonesia_phone" />

            <EditText
                android:id="@+id/phoneNumberField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no"
                android:inputType="phone" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_32"
            android:text="already have an account?" />

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/orange"
            android:textSize="@dimen/textsize_item"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_64"
            android:backgroundTint="@color/orange"
            android:text="@string/register" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>